@@ -29,6 +29,7 @@ $wgNewTables = array(
 	array( 'externallinks', 'patch-externallinks.sql' ),
 	array( 'job',           'patch-job.sql' ),
 	array( 'langlinks',     'patch-langlinks.sql' ),
+	array( 'querycache_info', 'patch-querycacheinfo.sql' ),
 );
 
 $wgNewFields = array(
