@@ -81,6 +81,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5570) Problems using <special page>/parameter link form for long titles
 * (bug 3884) Add $user parameter to AddNewUser hook, call it for by-email 
   registrations as well as self-registrations.
+* (bug 4327) Report age of cached data sets in query pages
 
 
 == Compatibility ==
